[package]
name = "asset-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
rlp = "0.5.2"
hex = "0.4.3"
anchor-spl = "0.30.0"
xcall ={ git = "https://github.com/icon-project/xcall-multi", branch = "feat/solana-xcall-contracts", features = ["cpi"] }
xcall-manager = {path = "../xcall-manager", features = ["cpi"] }

