[package]
name = "balanced-dollar"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "balanced_dollar"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
hex = "0.4.3"
anchor-spl = {version = "0.30.0", features = ["metadata"]}
rlp = "0.5.2"
# xcall-lib ={ git = "https://github.com/icon-project/xcall-multi", branch = "solana/xcall-multi", subdir = "contracts/solana"}
# xcall ={ git = "https://github.com/icon-project/xcall-multi", branch = "solana/xcall-multi", subdir = "contracts/solana/", features = ["cpi"] }
# rlp ={ git = "https://github.com/icon-project/xcall-multi", branch = "solana/xcall-multi", subdir = "contracts/solana/"}
xcall-manager = {path = "../xcall-manager", features = ["cpi"] }

[patch.crates-io]
borsh = { version = "1.5.1" }